Revision history for Whelk

{{$NEXT}}

1.00 - 2024-09-08
	- Stable version
	- OpenAPI endpoint will not be installed if path is not configured
	- Added extra field validation rules
	- CPAN tester fixes

0.06 - 2024-07-07
	- Fixed typos not being detected for endpoint parameters
	- Added Text::Levenshtein dependency and improved suggestions for unknown keys
	- Added documentation for Whelk::Schema::Definition
	- Added documentation for Whelk::OpenAPI
	- Added documentation for Kelp::Module::Whelk

0.05 - 2024-07-06
	- Framework no longer assumes resource is a subclass of Kelp, allowing custom base controllers
	- Added documentation for Whelk::Wrapper
	- Added documentation for Whelk::Formatter
	- Added documentation for Whelk::Role::Resource
	- Added documentation for Whelk::Resource
	- Set minimum List::Util version

0.04 - 2024-07-06
	- Default and example values are now validated before they are put into OpenAPI document
	- Typo detection now suggests a closest valid alternative if one exists
	- Whelk::OpenAPI has been refactored
	- Added documentation for Whelk::Exception
	- Set minimum YAML::PP version

0.03 - 2024-07-04
	- Framework now detects typos made in configuration of schemas and endpoints
	- Renamed request_schema to request and response_schema to response in Endpoint
	- Removed example libraries from the index
	- Documentation fixes

0.02 - 2024-07-03
	- Added a TodoApp example
	- Now uses persistent_controllers from Kelp 2.15
	- Documentation fixes

0.01 - 2024-07-03
	- First version
