@@ -1,6 +1,7 @@
 Revision history for Whelk
 
 {{$NEXT}}
+	- Fixed object strictness check
 
 1.00 - 2024-09-08
 	- Stable version
